apps/spontan-portal-dev/ClusterIp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spontan-portal-dev-service
spec:
  selector:
    app: spontan-portal-dev
  ports:
    # Below Port number is a service port number
    - port: 80
      # Below targetPort is a Container Port number
      targetPort: 3000
