apps/spontan-portal-dev/ingress-group-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: spontan-portal-dev-ingress-resource
  annotations:
    #    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: spontansolutions-group
    alb.ingress.kubernetes.io/certificate-arn: aws certificate
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: host_name
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: spontan-portal-dev-service
              port:
                number: 80
